# lssa-treasury

./: .gitignore  Cargo.toml  Makefile  README.md  WORKSHOP.md  treasury-idl.json
docs/: FURPS.md
examples/program_deployment/: Cargo.toml  treasury-idl.json
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
nssa-framework-macros/src/: lib.rs
treasury_core/: Cargo.toml
treasury_core/src/: lib.rs
treasury_program/: Cargo.toml
treasury_program/src/: add_member.rs  change_threshold.rs  create_vault.rs  deposit.rs  lib.rs  receive.rs  remove_member.rs  send.rs
