[workspace]
resolver = "2"
members = [
    "treasury_core",
    "treasury_program",
    "methods",
    "examples/program_deployment",
]
exclude = [
    "methods/guest",
]

# Patch token_core to use main branch (bedrock doesn't have it as separate crate)
[patch."https://github.com/logos-blockchain/lssa.git"]
token_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
token_program = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
