[workspace]
resolver = "2"
members = [
    "treasury_core",
    "treasury_program",
    "methods",
    "methods/guest",
    "examples/program_deployment",
]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.4", features = ['std'] }
risc0-build = "=3.0.4"
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration", features = ["host"] }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
