[package]
name = "treasury-examples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deploy_and_create_vault"
path = "src/bin/deploy_and_create_vault.rs"

[[bin]]
name = "send_from_vault"
path = "src/bin/send_from_vault.rs"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[[bin]]
name = "treasury_cli"
path = "src/bin/treasury_cli.rs"

[dependencies]
nssa-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
nssa-framework-core = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
treasury_core = { path = "../../treasury_core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration" }
risc0-zkvm = { version = "3.0.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
base58 = "0.2"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
