[package]
name = "treasury-examples"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[[bin]]
name = "treasury_cli"
path = "src/bin/treasury_cli.rs"

[dependencies]
nssa-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
nssa-framework-core = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
nssa-framework-cli = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
treasury_core = { path = "../../treasury_core" }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
