[package]
name = "treasury-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "treasury"
path = "src/bin/treasury.rs"

[dependencies]
treasury_core = { path = "../../treasury_core" }
nssa_core.workspace = true
nssa-framework = { path = "../../nssa-framework" }
nssa-framework-core = { path = "../../nssa-framework-core" }
risc0-zkvm.workspace = true
borsh.workspace = true
serde.workspace = true
