[package]
name = "treasury-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "treasury"
path = "src/bin/treasury.rs"

[dependencies]
treasury_core = { path = "../../treasury_core" }
nssa_core.workspace = true
nssa-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
nssa-framework-core = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
risc0-zkvm.workspace = true
borsh.workspace = true
serde.workspace = true
