[package]
name = "treasury-guest"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "treasury"
path = "src/bin/treasury.rs"

[dependencies]
treasury_core = { path = "../../treasury_core" }
treasury_program = { path = "../../treasury_program" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
risc0-zkvm = { version = "3.0.3", default-features = false }
borsh = "1.5.7"
